Fix responsiveness issues
Some text, like the hero title were overflowing its container and it
looked awful. Some media queries and flexbox tweaking should do the job

--- a/src/components/Career.css
+++ b/src/components/Career.css
@@ -1,6 +1,12 @@
 .career {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 1rem 2rem;
+}
+
+@media screen and (min-width: 40rem) {
+  .career {
+    flex-direction: row;
+  }
 }
