--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -6,6 +6,7 @@
   gap: 1rem;
   margin-top: 4rem;
   margin: 4rem -3rem 0;
+  background-color: orange;
 }
 
 .gallery-img {
